#192 Introduce hierarchy of the DynamoDBTableTreeItemValue-s items to additionally distinguish between table and index
Where the later requires also the table name.

--- a/src/main/resources/dynoman.css
+++ b/src/main/resources/dynoman.css
@@ -25,3 +25,7 @@ https://stackoverflow.com/questions/20541038/how-to-have-the-menu-mnemonic-under
     -fx-pref-width: 20px;
     -fx-pref-height: 20px;
 }
+
+.text {
+    -fx-font-family: "Verdana";
+}
