#228 Adjust the width of the "Create and Run" button

--- a/src/main/resources/dynoman.css
+++ b/src/main/resources/dynoman.css
@@ -13,6 +13,10 @@ https://stackoverflow.com/questions/20541038/how-to-have-the-menu-mnemonic-under
     -fx-pref-width: 100px;
 }
 
+.button-large {
+    -fx-pref-width: 120px;
+}
+
 .button-select {
     -fx-pref-width: 30px;
 }
