--- a/src/main/resources/dynoman.css
+++ b/src/main/resources/dynoman.css
@@ -17,6 +17,10 @@ https://stackoverflow.com/questions/20541038/how-to-have-the-menu-mnemonic-under
     -fx-pref-width: 120px;
 }
 
+.button-xlarge {
+    -fx-pref-width: 200px;
+}
+
 .button-select {
     -fx-pref-width: 30px;
 }
